--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1931,6 +1931,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 504, "Button", WS_TABSTOP, 462, 379, 42, 36
   CONTROL "", 123, "Button", WS_TABSTOP, 136, 379, 42, 36
   CONTROL "", 124, "Button", WS_TABSTOP, 87, 379, 42, 36
+  CONTROL "", 304, "Button", WS_TABSTOP, 590, 379, 42, 36
+  CONTROL "", 305, "Button", WS_TABSTOP, 633, 379, 42, 36
 }
 
 TPV_LISTA_TICKET_1280X752 DIALOG DISCARDABLE 4, 47, 548, 255
