--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14464,6 +14464,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 111, "Edit", WS_BORDER, 184, 69, 125, 11
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 121, 93, 60, 11
   CONTROL "", 121, "Edit", WS_BORDER, 184, 93, 125, 11
+  CONTROL "Incluir albaranes", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 121, 111, 64, 10
+  CONTROL "Incluir facturas", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 121, 122, 60, 10
   CONTROL "Todas", 1170, "TWebBtn", 0x00000000, 321, 13, 38, 11
   CONTROL "Ninguna", 1180, "TWebBtn", 0x00000000, 365, 13, 38, 11
   CONTROL "Serie A", 1190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 321, 26, 36, 12
