SAT en informe articulos

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1822,7 +1822,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-ART_8 DIALOG DISCARDABLE 28, 47, 650, 329
+ART_8 DIALOG DISCARDABLE 28, 47, 657, 329
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -3539,17 +3539,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 600, "TBitMap", 0x00800000, 0, 0, 270, 27
 }
 
-ARTINFO DIALOG DISCARDABLE -243, -98, 662, 374
+ARTINFO DIALOG DISCARDABLE -243, -98, 674, 380
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Artículos"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 300, "SysTabControl32", WS_TABSTOP, 1, 1, 655, 340
-  CONTROL "", 310, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 33, 344, 43, 43
-  CONTROL "&Informe", 500, "Button", WS_TABSTOP, 546, 344, 50, 14
-  CONTROL "&Cerrar", 501, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 605, 344, 50, 14
-  CONTROL "Ejercicio", -1, "Static", WS_GROUP, 3, 348, 30, 8
-  CONTROL "&Actualizar", 306, "Button", WS_TABSTOP, 486, 344, 50, 14
+  CONTROL "", 300, "SysTabControl32", WS_TABSTOP, 1, 1, 670, 340
+  CONTROL "", 310, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 448, 348, 43, 43
+  CONTROL "&Informe", 500, "Button", WS_TABSTOP, 561, 348, 50, 14
+  CONTROL "&Cerrar", 501, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 620, 348, 50, 14
+  CONTROL "Ejercicio", -1, "Static", WS_GROUP, 414, 352, 32, 8
+  CONTROL "&Actualizar", 306, "Button", WS_TABSTOP, 501, 348, 50, 14
+  CONTROL "", 200, "msctls_progress32", 0x00000000, 1, 342, 670, 4
+  CONTROL "Proceso...", 400, "Static", WS_GROUP, 1, 352, 300, 8
 }
 
 ENVIADO DIALOG DISCARDABLE 113, 59, 121, 39
@@ -3855,11 +3857,11 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-INFO_1 DIALOG DISCARDABLE 32, 0, 653, 330
+INFO_1 DIALOG DISCARDABLE 32, 0, 670, 330
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 156, 45, 491, 275
+  CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 156, 45, 514, 275
   CONTROL "", 310, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 44, 29, 109, 291
   CONTROL "&Modificar [F3]", 301, "Button", WS_TABSTOP, 156, 28, 50, 14
   CONTROL "&Zoom", 302, "Button", WS_TABSTOP, 211, 28, 50, 14
@@ -10622,12 +10624,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "Divisa", -1, "Button", BS_GROUPBOX, 2, 85, 294, 60
 }
 
-INFO_2 DIALOG DISCARDABLE 32, 0, 654, 330
+INFO_2 DIALOG DISCARDABLE 32, 0, 671, 330
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "TBtnBmp", 101, "TBtnBmp", 0x00000000, 44, 29, 12, 12
-  CONTROL "", 300, "TXBrowse", WS_TABSTOP, 44, 44, 603, 279
+  CONTROL "", 300, "TXBrowse", WS_TABSTOP, 44, 44, 623, 279
   CONTROL "TBtnBm", 102, "TBtnBmp", 0x00000000, 58, 29, 12, 12
   CONTROL "TBtnBm", 103, "TBtnBmp", 0x00000000, 72, 29, 12, 12
   CONTROL "TBtnBm", 104, "TBtnBmp", 0x00000000, 86, 29, 12, 12
