Correciones remitidas por Jose Microk

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18355,7 +18355,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 215, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 97, 41, 118, 12
 }
 
-FACPRV_1 DIALOG DISCARDABLE 50, 35, 670, 375
+FACPRV_1 DIALOG DISCARDABLE 50, 35, 670, 451
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -18439,30 +18439,30 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 420, "Static", WS_GROUP, 501, 349, 36, 22
   CONTROL "0", 491, "Static", SS_RIGHT|WS_GROUP, 605, 332, 52, 8
   CONTROL "Concepto", 707, "Static", WS_GROUP, 44, 104, 33, 8
-  CONTROL "", 600, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 303, 60, 11
-  CONTROL "Base 1", 708, "Static", WS_GROUP, 49, 306, 23, 8
-  CONTROL "", 601, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 162, 303, 45, 11
-  CONTROL "", 602, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 203, 300, 60, 11
-  CONTROL "Imp. 1", 709, "Static", WS_GROUP, 134, 306, 25, 8
-  CONTROL "", 603, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 290, 300, 45, 11
-  CONTROL "", 604, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 336, 300, 60, 11
-  CONTROL "R.E. 1", 710, "Static", WS_GROUP, 265, 303, 21, 8
-  CONTROL "", 610, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 319, 60, 11
-  CONTROL "Base 2", 711, "Static", WS_GROUP, 49, 322, 23, 8
-  CONTROL "", 611, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 162, 329, 45, 11
-  CONTROL "", 612, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 203, 315, 60, 11
-  CONTROL "Imp. 2", 712, "Static", WS_GROUP, 134, 322, 25, 8
-  CONTROL "", 613, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 290, 315, 45, 11
-  CONTROL "", 614, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 337, 315, 60, 11
-  CONTROL "R.E. 2", 713, "Static", WS_GROUP, 265, 318, 21, 8
-  CONTROL "", 620, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 335, 60, 11
-  CONTROL "Base 3", 714, "Static", WS_GROUP, 49, 338, 24, 8
-  CONTROL "", 621, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 346, 45, 11
-  CONTROL "", 622, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 203, 330, 60, 11
-  CONTROL "Imp. 3", 715, "Static", WS_GROUP, 134, 338, 25, 8
-  CONTROL "", 623, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 290, 330, 45, 11
-  CONTROL "", 624, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 336, 330, 60, 11
-  CONTROL "R.E. 3", 716, "Static", WS_GROUP, 265, 333, 21, 8
+  CONTROL "", 600, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 296, 60, 11
+  CONTROL "Base 1", 708, "Static", WS_GROUP, 44, 299, 27, 8
+  CONTROL "", 601, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 296, 45, 11
+  CONTROL "", 602, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 221, 296, 60, 11
+  CONTROL "% Imp. 1", 709, "Static", WS_GROUP, 139, 299, 32, 8
+  CONTROL "", 603, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 322, 296, 45, 11
+  CONTROL "", 604, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 296, 60, 11
+  CONTROL "% R.E. 1", 710, "Static", WS_GROUP, 285, 299, 33, 8
+  CONTROL "", 610, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 308, 60, 11
+  CONTROL "Base 2", 711, "Static", WS_GROUP, 44, 311, 27, 8
+  CONTROL "", 611, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 308, 45, 11
+  CONTROL "", 612, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 221, 308, 60, 11
+  CONTROL "% Imp. 2", 712, "Static", WS_GROUP, 139, 311, 32, 8
+  CONTROL "", 613, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 322, 308, 45, 11
+  CONTROL "", 614, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 308, 60, 11
+  CONTROL "% R.E. 2", 713, "Static", WS_GROUP, 285, 311, 33, 8
+  CONTROL "", 620, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 320, 60, 11
+  CONTROL "Base 3", 714, "Static", WS_GROUP, 44, 323, 27, 8
+  CONTROL "", 621, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 320, 45, 11
+  CONTROL "", 622, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 221, 320, 60, 11
+  CONTROL "% Imp. 3", 715, "Static", WS_GROUP, 139, 322, 32, 8
+  CONTROL "", 623, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 322, 320, 45, 11
+  CONTROL "", 624, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 320, 60, 11
+  CONTROL "% R.E. 3", 716, "Static", WS_GROUP, 285, 323, 33, 8
   CONTROL "NFC", -1, "Static", WS_GROUP, 44, 45, 35, 8
   CONTROL "Banco", -1, "Static", WS_GROUP, 449, 57, 31, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 449, 69, 31, 8
