TIPO DE IVA DESC LIBRE

--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1102,25 +1102,28 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 650, "Static", SS_RIGHT|WS_GROUP, 570, 281, 105, 11
 }
 
-LIBRE DIALOG DISCARDABLE 6, 18, 330, 148
+LIBRE DIALOG DISCARDABLE 6, 18, 330, 178
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Artículo libre"
 FONT 12, "Segoe UI"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 8, 12, 283, 16
   CONTROL "", 110, "Button", 0x00000000, 294, 12, 30, 16
-  CONTROL "", 120, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 150, 42, 141, 16
-  CONTROL "", 130, "Button", 0x00000000, 294, 42, 30, 16
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 150, 72, 141, 16
-  CONTROL "", 150, "Button", 0x00000000, 294, 72, 30, 16
-  CONTROL "", 160, "Edit", ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 8, 102, 283, 16
-  CONTROL "", 170, "Button", 0x00000000, 294, 102, 30, 16
-  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 263, 123, 30, 22
-  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 296, 123, 30, 22
+  CONTROL "", 120, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 150, 41, 141, 16
+  CONTROL "", 130, "Button", 0x00000000, 294, 41, 30, 16
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 150, 71, 141, 16
+  CONTROL "", 150, "Button", 0x00000000, 294, 71, 30, 16
+  CONTROL "", 160, "Edit", ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 8, 132, 283, 16
+  CONTROL "", 170, "Button", 0x00000000, 294, 132, 30, 16
+  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 263, 153, 30, 22
+  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 296, 153, 30, 22
   CONTROL "Descripción", -1, "Button", BS_GROUPBOX, 4, 2, 322, 28
-  CONTROL "Unidades", -1, "Button", BS_GROUPBOX, 4, 32, 322, 28
-  CONTROL "Precio", -1, "Button", BS_GROUPBOX, 4, 62, 322, 28
-  CONTROL "Impresora", -1, "Button", BS_GROUPBOX, 4, 92, 322, 28
+  CONTROL "Unidades", -1, "Button", BS_GROUPBOX, 4, 33, 322, 28
+  CONTROL "Precio", -1, "Button", BS_GROUPBOX, 4, 63, 322, 28
+  CONTROL "Impresora", -1, "Button", BS_GROUPBOX, 4, 122, 322, 28
+  CONTROL "", 200, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 150, 101, 141, 16
+  CONTROL "", 210, "Button", 0x00000000, 294, 101, 30, 16
+  CONTROL "Tipo de I.V.A.", -1, "Button", BS_GROUPBOX, 4, 93, 322, 28
 }
 
 ARQUEO_3_TCT DIALOG DISCARDABLE -47, 69, 350, 200
@@ -2289,5 +2292,18 @@ FONT 12, "Segoe UI"
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00a00000, 1, 46, 375, 229
+}
+
+HELPENTRYTACTILIVA DIALOG DISCARDABLE 120, -20, 205, 149
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Ayuda a la entrada"
+FONT 12, "Segoe UI"
+{
+  CONTROL "", 105, "TXBrowse", 0x00200000, 2, 3, 200, 110
+  CONTROL "", 140, "Button", WS_TABSTOP, 2, 118, 35, 30
+  CONTROL "", 150, "Button", WS_TABSTOP, 39, 118, 35, 30
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 2, 115, 200, 1
+  CONTROL "", IDOK, "Button", WS_TABSTOP, 130, 118, 35, 30
+  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 167, 118, 35, 30
 }
 
