--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -2132,16 +2132,18 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_THICKFRAME|WS_CAPTION|WS_SYSMENU|WS_VI
 CAPTION "Apertura de sesión"
 FONT 12, "Segoe UI"
 {
-  CONTROL "", 100, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 88, 36, 70, 12
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 88, 48, 70, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 88, 60, 70, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 88, 72, 70, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 88, 84, 70, 12
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 88, 110, 70, 16
+  CONTROL "", 100, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 88, 36, 90, 12
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 88, 48, 90, 12
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 88, 60, 90, 12
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 88, 72, 90, 12
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 88, 84, 90, 12
+  CONTROL "", 210, "Button", 0x00000000, 88, 111, 20, 16
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 109, 110, 69, 16
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 88, 127, 281, 12
-  CONTROL "", 160, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 88, 154, 70, 16
+  CONTROL "", 220, "Button", 0x00000000, 88, 154, 20, 16
+  CONTROL "", 160, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 109, 154, 69, 16
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 234, 177, 45, 30
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 159, 72, 210, 12
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 180, 72, 189, 12
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 281, 177, 45, 30
   CONTROL "A&yuda", 599, "Button", WS_TABSTOP, 328, 177, 45, 30
   CONTROL "Información de sesión", -1, "Button", BS_GROUPBOX, 44, 25, 329, 74
@@ -2152,11 +2154,11 @@ FONT 12, "Segoe UI"
   CONTROL "Entradas y salidas", -1, "Button", BS_GROUPBOX, 44, 100, 329, 42
   CONTROL "Importe", -1, "Static", WS_GROUP, 49, 118, 35, 8
   CONTROL "Descipción", -1, "Static", WS_GROUP, 49, 131, 37, 8
-  CONTROL "", 141, "Edit", WS_BORDER, 159, 110, 38, 16
+  CONTROL "", 141, "Edit", WS_BORDER, 180, 110, 38, 16
   CONTROL "Objetivos de ventas para sesión", -1, "Button", BS_GROUPBOX, 44, 143, 329, 30
   CONTROL "Objetivo", -1, "Static", WS_GROUP, 49, 162, 35, 8
-  CONTROL "", 161, "Edit", WS_BORDER, 159, 154, 38, 16
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 159, 84, 210, 12
+  CONTROL "", 161, "Edit", WS_BORDER, 180, 154, 38, 16
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 180, 84, 189, 12
   CONTROL "Usuario", -1, "Static", WS_GROUP, 49, 88, 30, 8
   CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Iniciando sesión", 200, "Static", WS_GROUP, 44, 3, 53, 10
