--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5146,20 +5146,23 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 8, 41, 320, 1
 }
 
-GRPFAM DIALOG DISCARDABLE 30, 73, 201, 67
+GRPFAM DIALOG DISCARDABLE 30, 73, 264, 91
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Grupos de familias"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 41, 2, 33, 11
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 41, 14, 155, 11
-  CONTROL "Publicar", 120, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 41, 28, 60, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 39, 49, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 94, 49, 50, 14
-  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 149, 49, 50, 14
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 41, 15, 155, 11
+  CONTROL "", 130, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 41, 28, 155, 11
+  CONTROL "Publicar", 120, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 41, 41, 60, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 100, 73, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 155, 73, 50, 14
+  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 210, 73, 50, 14
   CONTROL "Código", -1, "Static", WS_GROUP, 3, 5, 27, 8
-  CONTROL "Nombre ", -1, "Static", WS_GROUP, 3, 17, 27, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 42, 197, 1
+  CONTROL "Nombre ", -1, "Static", WS_GROUP, 3, 18, 27, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 68, 259, 1
+  CONTROL "", 600, "TBitmap", 0x00800000, 199, 2, 60, 62
+  CONTROL "Imagen", -1, "Static", WS_GROUP, 3, 31, 27, 8
 }
 
 LFACCLI DIALOG DISCARDABLE 9, -33, 431, 286
